Add htlm and server code

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                         <th>Email (Anonymized)</th>
                         <th>Nonce</th>
                         <th>Leading Zeros</th>
+                        <th>Timestamp</th>
                     </tr>
                 </thead>
                 <tbody id="leaderboardBody">
@@ -342,6 +343,7 @@
                                     <td>${submission.email}</td>
                                     <td>${submission.nonce}</td>
                                     <td>${submission.leading_zeros}</td>
+                                    <td>${submission.timestamp}</td>
                                 </tr>
                             `;
                         });
